--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+  --font-family: "Lexend", sans-serif;
   --font-small: 16px;
   --font-medium: 21px;
   --font-large: 24px;
@@ -31,6 +32,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: var(--font-family);
 }
 
 body {
