--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   --base-background-color: whitesmoke;
   --top-background-color: white;
   --inset-background-color: gainsboro;
+  --book-cover-background: lavender;
   --button-base-color: rgb(230, 230, 230);
   --transluscent-gray: rgb(0, 0, 0, 0.2);
   --header-button-hover-color: rgb(240, 240, 240);
@@ -170,7 +171,7 @@ button.toggle-read {
 
 .book-cover {
   height: 300px;
-  background-color: rebeccapurple;
+  background-color: var(--book-cover-background);
 }
 
 .book-details {
