Add styling to invalid form inputs

--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ button:hover {
   cursor: pointer;
 }
 
+input:invalid {
+  outline: 3px solid brown;
+}
+
 input[type="checkbox"] {
   background-color: var(--inset-background-color);
   height: 15px;
